--- a/src/pages/2022/home.mdx
+++ b/src/pages/2022/home.mdx
@@ -11,10 +11,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
          src="/images/2022/2022_lightbluebanner.png"
          className="flex w-full mx-auto"
     />
-    <p className="text-5xl font-display font-black text-navy">13th Annual oSTEM Conference 2023</p>
+    <p className="text-5xl font-display font-black text-navy">12th Annual oSTEM Conference 2022</p>
     <hr/>
     <p className="flex justify-center text-3xl font-display">
-        Anaheim, CA
+    November 11 &ndash; 13, 2022 | Boston, MA
     </p>
 </div>
 <div className="grid md:grid-cols-5 mt-9">
@@ -22,7 +22,12 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         <div className="rounded-r md:col-span-5 p-4 bg-tint-seamist">
             <h3>Conference for LGBTQ+ people in STEM Fields</h3>
             <p>
-                Text goes here.
+                We're very excited to announce that our Annual Conference is returning to an in-person format for 2022.
+                This conference is a space for LGBTQ+ students and professionals in STEM fields to share their experiences and learn from one another.
+                We have programs ranging from safer spaces to talk about queer issues to discussing the latest in research conducted by our members.
+            </p>
+            <p>
+                If you want a space where you can be your authentic LGBTQ+ self and your authentic STEM self, this is the conference for you.
             </p>
         </div>
         <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-ostem-blue border-solid pb-4">
@@ -57,6 +62,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <div className="text-xl flex justify-center p-8">
   <CTAButton onClick="https://www.ostem.org/page/newsletter">Sign Up for Our Newsletter</CTAButton>
+</div>
+
+<div className="bg-gradient-to-r from-seafoam to-navy via-deepwater">
+    <ConferenceCountdown />
 </div>
 
 <div className="mt-8"> <Image src="/images/oSTEM.2019.0077.jpg" alt="" layout="responsive" width="800" height="500"/></div>
