--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -20,17 +20,24 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 <div className="grid md:grid-cols-5 mt-9">
         <div className="rounded-l md:col-span-5 tint tint-dark"><img className="rounded-l object-cover w-full h-full" src="/images/oSTEM.2019.0049_Update_BannerSize.jpg" alt=""/></div>
         <div className="rounded-r md:col-span-5 p-4 bg-tint-seamist">
-            <h3>Conference for LGBTQ+ people in STEM Fields</h3>
+            <h3>Conference for LGBTQ+ People in STEM</h3>
             <p>
-                Text goes here.
+                The 13th Annual oSTEM Conference will take place in Anaheim, California with 1,000+ LGBTQ+ students, professionals, and recruiters in STEM fields from across the country and around the globe. This space is designed for attendees to share their professional and personal experiences and learn from one another in an authentic and vulernable way. Programs and content range from introspective including safer spaces to talk about queer issues to technical such as discussing the latest in research conducted by our members.
+                
+                For examples of past conference programs and content, visit...
+                
             </p>
         </div>
         <div className="rounded-r md:col-span-5 mt-8 border-b-4 border-l-4 border-r-4 border-ostem-blue border-solid pb-4">
             <div className="bg-ostem-blue">
-                <h3 className="p-4">Registration Closed!</h3>
+                <h3 className="p-4">Upcoming Dates</h3>
             </div>
             <p className="p-4">
-                Registration for full conference and expo is now closed!             
+                Request for Programs Open: March 1, 2023?
+                Call for Posters Open: March 1, 2023?
+                Early Bird Registration: May 1, 2023?
+                Full-Priced Registration: August 1, 2023?
+                Registration Deadline: October 15, 2023?
             </p>
             <div className="text-xl flex justify-center p-2">
                 <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue"> 2022 Registeration Closed</CTAButton>
@@ -41,9 +48,9 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <h3 className="p-4">Request for Proposals</h3>
             </div>
             <p className="p-4">
-                We are no longer accepting proposals for 2022. oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
+                2023 Call for Proposals Coming Soon! oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
                 Our conference offers a unique opportunity for LGBTQ individuals in STEM to present to an audience of peers. 
-                Come be a part of the foundational experience and submit a program today! 
+                Come be a part of the foundational experience by submitting a program this year! 
                 We've had presentations on identity issues such as "Traveling while Trans" and technical content like "Life Lessons Looking Through Infrared Technology". 
                 If you've got a program idea or a presentation you've given at other conferences or your job/school consider presenting at oSTEM's Annual Conference. 
                 Submit your program to our Request for Presentations today!
