--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -65,7 +65,9 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 </div>
 
 <div className="bg-gradient-to-r from-seafoam to-navy via-deepwater">
-    <ConferenceCountdown />
+    <p>
+        13th Annual Conference details coming soon!
+    </p>
 </div>
 
 <div className="mt-8"> <Image src="/images/oSTEM.2019.0077.jpg" alt="" layout="responsive" width="800" height="500"/></div>
