--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -64,8 +64,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   <CTAButton onClick="https://www.ostem.org/page/newsletter">Sign Up for Our Newsletter</CTAButton>
 </div>
 
-<div className="bg-gradient-to-r from-seafoam to-navy via-deepwater">
-        13th Annual Conference details coming soon!
+<div className="text-5xl font-display font-black text-navy">13th Annual oSTEM Conference details coming soon!
 </div>
 
 <div className="mt-8"> <Image src="/images/oSTEM.2019.0077.jpg" alt="" layout="responsive" width="800" height="500"/></div>
