--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -22,9 +22,11 @@ import { SiteLayout } from "../components/layout/SiteLayout";
         <div className="rounded-r md:col-span-5 p-4 bg-tint-seamist">
             <h3>Conference for LGBTQ+ People in STEM</h3>
             <p>
-                The 13th Annual oSTEM Conference will take place in Anaheim, California with 1,000+ LGBTQ+ students, professionals, and recruiters in STEM fields from across the country and around the globe. This space is designed for attendees to share their professional and personal experiences and learn from one another in an authentic and vulernable way. Programs and content range from introspective including safer spaces to talk about queer issues to technical such as discussing the latest in research conducted by our members.
+                The 13th Annual oSTEM Conference will take place in Anaheim, California with 1,000+ LGBTQ+ students, professionals, and recruiters in STEM fields from across the country and around the globe. This space is designed for attendees to share their professional and personal experiences and learn from one another in an authentic and vulernable way. Programs and content range from introspective including safer spaces to talk about queer issues and career development to technical such as discussing the latest in research conducted by our members. The Career & Graduate School Expo allows attendees to connect and network with professionals, academics, and colleagues from STEM industries and universities.
                 
-                For examples of past conference programs and content, visit...
+                For more examples of sessions, speakers, and career expo exhibitors, click here for the 2022 conference program.
+                
+                If you want a space where you can be your authentic LGBTQ+ self and your authentic STEM self, this is the conference for you.
                 
             </p>
         </div>
@@ -33,11 +35,11 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <h3 className="p-4">Upcoming Dates</h3>
             </div>
             <p className="p-4">
-                Request for Programs Open: March 1, 2023?
-                Call for Posters Open: March 1, 2023?
-                Early Bird Registration: May 1, 2023?
-                Full-Priced Registration: August 1, 2023?
-                Registration Deadline: October 15, 2023?
+                Request for Programs Open: March 1, 2023? <br>
+                Call for Posters Open: March 1, 2023? <br>
+                Early Bird Registration: May 1, 2023? <br>
+                Full-Priced Registration: August 1, 2023? <br>
+                Registration Deadline: October 15, 2023?<br>
             </p>
             <div className="text-xl flex justify-center p-2">
                 <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue"> 2022 Registeration Closed</CTAButton>
@@ -49,14 +51,12 @@ import { SiteLayout } from "../components/layout/SiteLayout";
             </div>
             <p className="p-4">
                 2023 Call for Proposals Coming Soon! oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
-                Our conference offers a unique opportunity for LGBTQ individuals in STEM to present to an audience of peers. 
-                Come be a part of the foundational experience by submitting a program this year! 
-                We've had presentations on identity issues such as "Traveling while Trans" and technical content like "Life Lessons Looking Through Infrared Technology". 
-                If you've got a program idea or a presentation you've given at other conferences or your job/school consider presenting at oSTEM's Annual Conference. 
+                Our conference offers a unique opportunity for LGBTQ+ individuals in STEM to present to an audience of peers. 
+                Come be a part of the foundational experience by submitting a program this year! <br>
+                We've had presentations on identity issues, student leadership and career development, and technical content. Examples include "Traveling while Trans", "Hosting Campus Events & Collaborating with Campus Partners", and "Life Lessons Looking Through Infrared Technology".
+                If you've got a program idea or a presentation you've given at other conferences or your job/school consider presenting at oSTEM's Annual Conference. <br>
                 Submit your program to our Request for Presentations today!
             </p>
-            <p className="p-4">
-                If you want a space where you can be your authentic LGBTQ+ self and your authentic STEM self, this is the conference for you.
             </p>
         </div>
     
