--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,11 +35,11 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <h3 className="p-4">Upcoming Dates</h3>
             </div>
             <p className="p-4">
-                Request for Programs Open: March 1, 2023? <br>
-                Call for Posters Open: March 1, 2023? <br>
-                Early Bird Registration: May 1, 2023? <br>
-                Full-Priced Registration: August 1, 2023? <br>
-                Registration Deadline: October 15, 2023?<br>
+                Request for Programs Open: March 1, 2023? <br/>
+                Call for Posters Open: March 1, 2023? <br/>
+                Early Bird Registration: May 1, 2023? <br/>
+                Full-Priced Registration: August 1, 2023? <br/>
+                Registration Deadline: October 15, 2023?<br/>
             </p>
             <div className="text-xl flex justify-center p-2">
                 <CTAButton onClick="/2022/registration" backgroundColor="ostem-blue"> 2022 Registeration Closed</CTAButton>
