Add 2023 temp banner Also fixes two <br> tags not being <br/>

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,8 +7,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 <SiteLayout>
 
 <div className="border-b-4 border-deepwater border-solid pb-4 text-center">
-    <img alt="Sail to Success Conference Banner"
-         src="/images/2022/2022_lightbluebanner.png"
+    <img alt="Anaheim 2023 Banner"
+         src="/images/2023/2023_templogo.png"
          className="flex w-full mx-auto"
     />
     <p className="text-5xl font-display font-black text-navy">13th Annual oSTEM Conference 2023</p>
@@ -52,11 +52,10 @@ import { SiteLayout } from "../components/layout/SiteLayout";
             <p className="p-4">
                 2023 Call for Proposals Coming Soon! oSTEM's Annual Conference has, as a foundation, our exceptional programming. 
                 Our conference offers a unique opportunity for LGBTQ+ individuals in STEM to present to an audience of peers. 
-                Come be a part of the foundational experience by submitting a program this year! <br>
+                Come be a part of the foundational experience by submitting a program this year! <br/>
                 We've had presentations on identity issues, student leadership and career development, and technical content. Examples include "Traveling while Trans", "Hosting Campus Events & Collaborating with Campus Partners", and "Life Lessons Looking Through Infrared Technology".
-                If you've got a program idea or a presentation you've given at other conferences or your job/school consider presenting at oSTEM's Annual Conference. <br>
+                If you've got a program idea or a presentation you've given at other conferences or your job/school consider presenting at oSTEM's Annual Conference. <br/>
                 Submit your program to our Request for Presentations today!
-            </p>
             </p>
         </div>
     
