Updated RFP page, ready for launch

--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -11,17 +11,16 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 
 ## Submission Milestones
 
-- Monday, May 30: Request for programming released
-- Wednesday, August 10: Deadline for Submissions
-- Tuesday, September 6: Acceptance Notifications
+- Monday, April 3: Request for programming released
+- Friday, June 2: Deadline for Submissions
+- Friday, July 14: Acceptance Notifications
 
 ## Program Topics
 
 Presentations will be required to select from the following categories: (1)
-Technical Expertise, (2) Leader Development, (3) Intersectionality and
-Identity, (4) Career and Professional Development, and (5) Other Relevant
-Topics. New this year we are offering a 'AI, ML & Emerging Technologies' track!
-Example session topics that would fit in each category are provided in
+Technical Expertise, (2) Student Leadership Development, (3) Intersectionality and
+Identity, (4) Career and Professional Development, (5) DEI in the Workplace, and (6) Other Relevant
+Topics. Example session topics that would fit in each category are provided in
 the bullets below each category.
 
 <div className="grid gap-8 sm:grid-cols-2 my-8">
@@ -29,114 +28,148 @@ the bullets below each category.
 
  - Presenting case studies on common pitfalls or errors and solutions
  - Address upcoming challenges or novel applications
- - In depth research presentation
+ - Offering in-depth research presentation
 
 </TopicSquare>
-<TopicSquare title="AI, ML &amp; Emerging Technologies" borderColor="border-orange-500">
+<TopicSquare title="Student Leadership Development" borderColor="border-orange-500">
 
- - How to use and apply AI/ML to various STEM disciplines
- - Ethics in AI/ML training set selections
- - Strategies for gender-inclusive language reform
-
-</TopicSquare>
-<TopicSquare title="Leader Development" borderColor="border-yellow-500">
-
-- Tools and resources for developing student programming on campus
-- Identifying leadership strengths and weaknesses
-- Team building activities and applications
+ - Sharing tools and resources for developing successful programs
+ - Identifying leadership strengths and weaknesses
+ - Exploring team building activities and applications
 
 </TopicSquare>
-<TopicSquare title="Intersectionality and Identity" borderColor="border-green-500">
+<TopicSquare title="Intersectionality and Identity" borderColor="border-yellow-500">
 
-- How gender, race, and sexual orientation affect day-to-day interactions
-- Developing an understanding of how different identities shape individuals
+- Examining how our intersecting identities shape our interactions and/or worldview
+- Navigating identity-based microaggressions related to race, ethnicity, gender, etc.
 
 </TopicSquare>
-<TopicSquare title="Career and Professional Development" borderColor="border-blue-500">
+<TopicSquare title="Career and Professional Development" borderColor="border-green-500">
 
 - Finding and connecting with queer mentors and/or mentees
 - Enhancing queer experiences in the workplace
 - Creating cover letters and/or resumes
+- Entering the workforce and navigating career pivots
+
+
+</TopicSquare>
+<TopicSquare title="DEI in the Workplace" borderColor="border-blue-500">
+
+- Impact of intersectional identities on career decisions and trajectory
+- Best practices and policies in Talent Acquisition, Employee Research Groups, etc. for your industry
 
 </TopicSquare>
 <TopicSquare title="Other Relevant Topics" borderColor="border-purple-500">
 
-- Queer wellness topics
-- Transitioning in the workplace
+- Exploring queer wellness topics
+- Understanding transitioning in the workplace
+- Leveraging your volunteer experience in professional settings
+
 
 </TopicSquare>
 </div>
 
-## Presentation Format
+## Program Format
 
-There are two options for Program Submissions:
+There are three options for Program Submissions:
 
-- **Workshop**: We define a workshop as 1-2 speakers presenting on a program
-  topic. All workshops are expected to be 60 minutes, a 50 minute presentation
-  with 10 minutes for Q&amp;A at the end of the session.
+- **Workshop**: Workshops are defined as 1-2 speakers presenting on a program topic. 
+    All workshops are expected to be 50 minutes.
 
-- **Panel**: We define a panel as 3-6 speakers that each contribute a unique
-  perspective on a similar topic. Panels can be collaborative across different
-  universities, companies, and industries depending on the topic. Members
-  participating in the discussion are expected to be part of a live discussion.
-- **Lightning Talk**: We define a lighting talk as an individual
-  giving a quick introduction to pique interest in a specific STEM or LGBT+
-  related topic. This may be a resource you have found interesting or an issue
-  that future STEM professionals could investigate. These talks will be 8
-  minutes long with 2 minutes for questions. This is an excellent opportunity to
-  give an oral presentation if a 50 minute presentation is beyond the scope of
-  your topic!
+- **Panel**: Panels are defined as 3-4 speakers that each contribute a unique 
+    perspective on a similar topic. Panels can be collaborative across different 
+    universities, companies, and industries depending on the topic. In addition, 
+    panels should include historically marginalized voices. All panelists are expected 
+    to contribute and participate in the discussion. (Panels are limited to 4 
+    presenter discount codes.)
+
+- **Lightning Talk**: We define a lighting talk as an individual giving a quick 
+    introduction to pique interest in a specific STEM or LGBTQ+ related topic. This 
+    may be a resource you have found interesting or an issue that future STEM 
+    professionals could investigate. These talks will be 12 minutes long with 3 
+    minutes for questions. This is an excellent opportunity to give an oral 
+    presentation if a 50 minute presentation is beyond the scope of your topic!
+
 
 ## Proposal Components
 
-Program selection for our conference is highly competitive. Please follow the
-guidelines that have been outlined belew to improve your chances of being
-selected. When designing your proposal, please keep in mind that interactive
-activities/presentations or panel discussions will occur live between 8 AM and 2
-PM PDT. Program assessment will not be provided by oSTEM.
+Program selection for our conference is highly competitive. Please follow the guidelines that have been outlined in this document to improve your chances of being selected.
 
-- **Session Title (5%):** Clearly able to identify program topic and how this
-  relates to the oSTEM mission (20 words max).
-- **Abstract for Program Book (10%):** Succinct description of the goals of the
-  workshop and what participants will learn by attending (5%)
-- **What is the value of this workshop to the LGBTQ+ STEM Community? (25%)**
-  Value is described and fully justified. Relevance to LGBTQ+ and STEM
-  communities is included. What makes this program unique to this conference?
-  (500 words max)
-- **How will the proposed program engage the audience? (20%)**
-  Activities/Strategies for engagement are fully explained. How engagement with
-  the audience will supplement the presentation or panel is included. (300 words
-  max)
+<br></br>
+<u>Your submission will be evaluated based on the following:</u> <br></br>
+  <ul>
+    <li>An engaging title and abstract</li>
+    <li>Value to the LGBTQIA+ STEM Community</li>
+    <li>Attendee Engagement</li>
+    <li>A breakdown of your program that outlines the questions / topics you will be addressing</li>
+    <li>Having experience and/or identity(ies) that support your program proposal</li>
+  </ul>
+<br></br>   
 
-- **Specific workshop outline OR specific panel topics / What qualifications do
-  you have to speak on your proposed topic? (25%)**
+<u>Please provide the following information (will not be used for evaluation):</u><br></br>
+  <ul> 
+    <li>Is this session closed to members of a specific community only? If so, please specify.</li>
+    <li>Please describe any additional technical services you may need. </li>
+    <li>The standard room set-up includes a projector, HDMI cord, screen, microphones, and a table. </li>
+    <li>For each presenter, please provide a name, contact information, demographic information, a headshot, and a short biography.</li>
+    <li>Content warnings as applicable (for more information, check out <a href="https://sites.lsa.umich.edu/inclusive-teaching-sandbox/wp-content/uploads/sites/853/2021/02/An-Introduction-to-Content-Warnings-and-Trigger-Warnings-Draft.pdf" title="An Introduction to Content Warnings">this resource</a> from the University of Michigan)</li>
+  </ul>
+<br></br>  
 
-  - For workshops, give the outline for your presentation, approximating the
-    amount of time spent on each question/topic (_e.g._, 20 minute talk on Topic
-    X, 10 minutes of discussion, 10 minutes of questions, etc.).
-  - For panels, give specific questions that your panel will be discussing and
-    how these questions support the proposed topic.
-  - For Lightning Talks, give evidence for why you are qualified to speak on
-    your proposed topic (_i.e._ experience, exposure, publications, ect.).
+<u>Your proposal must include the following components: </u> <br></br>
+  <ul>
+    <li>
+      <b>Session Title:</b> 
+      <ul>
+        <li>Identifies program topic and how this relates to the oSTEM mission</li>
+      </ul>
+    </li>
+    <li>
+      <b>Abstract for Program Book:</b> 
+      <ul>
+        <li>Provides a succinct description of the goals of the workshop and what participants will learn</li>
+      </ul>
+    </li>
+    <li>
+      <b>What is the value of this workshop to the LGBTQ+ STEM Community?</b> 
+      <ul>
+        <li>Describes and justifies the workshop’s value</li>
+        <li>Establishes relevance to LGBTQ+ and STEM communities</li>
+        <li>States: what makes this program unique to this conference?</li>
+      </ul>
+    </li>
+    <li>
+      <b>How will the proposed program engage the audience?</b> 
+      <ul>
+        <li>Explains the program’s activities/strategies for engagement</li>
+        <li>Demonstrates how engagement with the audience will supplement the presentation/panel</li>
+      </ul>
+    </li>
+    <li>
+      <b>Session Outline</b> 
+      <ul>
+        <li>(Workshop): Submits an outline of the presentation, approximating the amount of time spent on each question/topic. i.e. (20 minute talk on Topic X, 10 minutes of discussion, 10 minutes of questions, etc.) </li>
+        <li>(Panel): Outlines specific questions that the panel will be discussing and how these questions support the proposed topic.</li>
+        <li>(Lightning Talks): Explain why you are qualified to speak on your proposed topic (i.e. expertise, personal or professional experience, exposure, publications, etc.)</li>
+      </ul>
+    </li>
+    <li>
+      <b>Presenter identity & experience match the proposed topic</b> 
+      <ul>
+        <li>Demonstrates a basis of knowledge and relevant personal experience for this proposed program</li>
+      </ul>
+    </li>
+  </ul>
 
-- **Presenter identity & experiences match the proposed topic (15%):**
-  Presenter(s) demonstrate a basis of knowledge for this proposed program.
-  Consistency between presented topic, value to LGBTQ+ community, and STEM.
+<br></br>
 
-In addition to the criteria above, please ensure you have provided the following
-information:
+For a downloadable list of questions required for submission please email conference-programming@ostem.org
 
-- Is this session intended for a specific community only? If so, specify.
-- Please describe any additional technical services you may need.
-- For each presenter, please provide a name, contact information, demographic
-  information, a headshot, and a short biography.
+NOTE: If you are unable to access the submission form due to technical issues please contact conference@ostem.org prior to sending a document or email submission.
 
-NOTE: If you are unable to access the submission form due to technical issues
-please contact conference@ostem.org for approval to send a document or email
-submission.
+<center><h2>To submit a proposal, please click <a href="https://form.jotform.com/222764576640159" title="2023 Program Submissions">here</a></h2></center>
 
 ## Additional Information
-
 
 For more information about oSTEM visit https://ostem.org.
 
