Style 2023 RFP page(s) Adding new color scheme Changing homepage layout Don't judge me for the color names

--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -4,18 +4,25 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 
 <SiteLayout title="Request for Proposals">
 
-<div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
+<div className="border-b-4 border-chill-green border-solid pb-4 mb-4 text-center">
     <p className="text-5xl font-display font-black">Requests for Proposals</p>
 </div>
 
+<div className="text-bright-peach font-bold">
 
 ## Submission Milestones
+
+</div>
 
 - Monday, April 3: Request for programming released
 - Friday, June 2: Deadline for Submissions
 - Friday, July 14: Acceptance Notifications
 
+<div className="text-bright-peach font-bold">
+
 ## Program Topics
+
+</div>
 
 Presentations will be required to select from the following categories: (1)
 Technical Expertise, (2) Student Leadership Development, (3) Intersectionality and
@@ -23,7 +30,7 @@ Identity, (4) Career and Professional Development, (5) DEI in the Workplace, and
 Topics. Example session topics that would fit in each category are provided in
 the bullets below each category.
 
-<div className="grid gap-8 sm:grid-cols-2 my-8">
+<div className="grid gap-4 sm:grid-cols-2 my-4">
 <TopicSquare title="Technical Expertise" borderColor="border-red-500">
 
  - Presenting case studies on common pitfalls or errors and solutions
@@ -69,7 +76,11 @@ the bullets below each category.
 </TopicSquare>
 </div>
 
+<div className="text-bright-peach font-bold">
+
 ## Program Format
+
+</div>
 
 There are three options for Program Submissions:
 
@@ -90,13 +101,15 @@ There are three options for Program Submissions:
     minutes for questions. This is an excellent opportunity to give an oral 
     presentation if a 50 minute presentation is beyond the scope of your topic!
 
+<div className="text-bright-peach font-bold">
 
 ## Proposal Components
 
+</div>
+
 Program selection for our conference is highly competitive. Please follow the guidelines that have been outlined in this document to improve your chances of being selected.
 
-<br></br>
-<u>Your submission will be evaluated based on the following:</u> <br></br>
+#### Your submission will be evaluated based on the following:
   <ul>
     <li>An engaging title and abstract</li>
     <li>Value to the LGBTQIA+ STEM Community</li>
@@ -106,7 +119,7 @@ Program selection for our conference is highly competitive. Please follow the gu
   </ul>
 <br></br>   
 
-<u>Please provide the following information (will not be used for evaluation):</u><br></br>
+#### Please provide the following information (will not be used for evaluation):
   <ul> 
     <li>Is this session closed to members of a specific community only? If so, please specify.</li>
     <li>Please describe any additional technical services you may need. </li>
@@ -116,7 +129,7 @@ Program selection for our conference is highly competitive. Please follow the gu
   </ul>
 <br></br>  
 
-<u>Your proposal must include the following components: </u> <br></br>
+#### Your proposal must include the following components:
   <ul>
     <li>
       <b>Session Title:</b> 
@@ -164,12 +177,19 @@ Program selection for our conference is highly competitive. Please follow the gu
 <br></br>
 
 For a downloadable list of questions required for submission please email conference-programming@ostem.org
+<br/>
+<strong>NOTE:</strong> If you are unable to access the submission form due to technical issues please contact conference@ostem.org prior to sending a document or email submission.
 
-NOTE: If you are unable to access the submission form due to technical issues please contact conference@ostem.org prior to sending a document or email submission.
+<div className="text-center text-3xl my-4">
+<CTAButton onClick="https://form.jotform.com/222764576640159" backgroundColor="bright-peach"> 
+Submit a Proposal 
+</CTAButton></div>
 
-<center><h2>To submit a proposal, please click <a href="https://form.jotform.com/222764576640159" title="2023 Program Submissions">here</a></h2></center>
+<div className="text-bright-peach font-bold">
 
 ## Additional Information
+
+</div>
 
 For more information about oSTEM visit https://ostem.org.
 
