--- a/src/pages/2023/rfp.mdx
+++ b/src/pages/2023/rfp.mdx
@@ -14,9 +14,9 @@ import { TopicSquare } from "../../components/rfp/TopicSquare";
 
 </div>
 
-- Monday, April 3: Request for programming released
+- Monday, April 3: Request for Programming Released
 - Friday, June 2: Deadline for Submissions
-- Friday, July 14: Acceptance Notifications
+- Friday, July 14: RFP Decision Notifications
 
 <div className="text-bright-peach font-bold">
 
