--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,7 +14,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     <p className="text-5xl font-display font-black text-navy">13th Annual oSTEM Conference 2023</p>
     <hr/>
     <p className="flex justify-center text-3xl font-display">
-        Anaheim, CA
+        November 9 – 12, 2023 | Anaheim, CA 
     </p>
 </div>
 <div className="grid md:grid-cols-5 mt-9">
